--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   },
   "description": "MailOnline stylelint configuration.",
   "devDependencies": {
+    "eslint": "^3.8.1",
+    "eslint-config-mailonline": "^2.0.0",
     "husky": "^0.11.7",
     "jsonlint": "^1.6.2",
     "stylelint": "^7.2.0"
@@ -21,6 +23,7 @@
   "scripts": {
     "format": "jsonlint --sort-keys --in-place --indent '  ' ./stylelintrc.json && echo '' >> ./stylelintrc.json",
     "precommit": "npm run format",
+    "lint": "eslint ./index.js",
     "test": ""
   },
   "version": "1.0.0"
