--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
   },
   "scripts": {
     "format": "jsonlint --sort-keys --in-place --indent '  ' ./stylelintrc.json && echo '' >> ./stylelintrc.json",
-    "precommit": "npm run format",
     "lint": "eslint ./index.js",
+    "precommit": "npm run lint && npm run format",
     "test": ""
   },
   "version": "1.0.0"
