chore: add test script to the pre-commit hook

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "scripts": {
     "format": "jsonlint --sort-keys --in-place --indent '  ' ./stylelintrc.json && echo '' >> ./stylelintrc.json",
     "lint": "eslint ./index.js",
-    "precommit": "npm run lint && npm run format",
+    "precommit": "npm run lint && npm run test && npm run format",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
     "test": ""
   },
