--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "lint": "eslint ./index.js",
     "precommit": "npm run lint && npm run test && npm run format",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
-    "test": ""
+    "test": "echo 'Hello, World!'"
   },
   "version": "1.0.0"
 }
