--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "description": "MailOnline stylelint configuration.",
   "devDependencies": {
     "eslint": "^3.8.1",
-    "eslint-config-mailonline": "^2.0.0",
-    "husky": "^0.11.7",
+    "eslint-config-mailonline": "^6.0.0",
+    "husky": "^0.13.1",
     "jsonlint": "^1.6.2",
-    "semantic-release": "^4.3.5",
+    "semantic-release": "^6.3.2",
     "stylelint": "^7.2.0"
   },
   "keywords": [
@@ -26,7 +26,7 @@
     "lint": "eslint ./index.js",
     "precommit": "npm run lint && npm run test && npm run format",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
-    "test": "echo 'Hello, World!'"
+    "test": "echo 'this project has no test'"
   },
   "version": "1.0.0"
 }
