feat: update stylelint-config-standard
BREAKING CHANGE: Migrating from version 14.0.0 to 16.0.0 please go to
https://github.com/stylelint/stylelint-config-standard/blob/master/CHANGELOG.md
to see the breaking changes

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,7 @@
 {
-  "extends": "mailonline"
+  "extends": "mailonline",
+  "rules": {
+    "import/no-commonjs": "off",
+    "import/unambiguous": "off"
+  }
 }
