--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "dependencies": {
-    "stylelint-config-standard": "^16.0.0"
+    "stylelint-config-standard": "^17.0.0"
   },
   "description": "MailOnline stylelint configuration.",
   "devDependencies": {
-    "eslint": "^3.8.1",
-    "eslint-config-mailonline": "^6.0.0",
-    "husky": "^0.13.1",
+    "eslint": "^4.3.0",
+    "eslint-config-mailonline": "^7.0.1",
+    "husky": "^0.14.3",
     "jsonlint": "^1.6.2",
-    "semantic-release": "^6.3.2",
-    "stylelint": "^7.2.0"
+    "semantic-release": "^6.3.6",
+    "stylelint": "~8.0.0"
   },
   "keywords": [
     "stylelint-config"
