--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "dependencies": {
-    "stylelint-config-standard": "^17.0.0"
+    "stylelint-config-standard": "^18.2.0"
   },
   "description": "MailOnline stylelint configuration.",
   "devDependencies": {
-    "eslint": "^4.3.0",
+    "eslint": "^4.19.1",
     "eslint-config-mailonline": "^9.0.0",
     "husky": "^0.14.3",
-    "jsonlint": "^1.6.2",
-    "semantic-release": "^8.2.0",
-    "stylelint": "~8.2.0"
+    "jsonlint": "^1.6.3",
+    "semantic-release": "^15.1.5",
+    "stylelint": "^9.2.0"
   },
   "keywords": [
     "stylelint-config"
