--- a/package.json
+++ b/package.json
@@ -16,16 +16,18 @@
     "test": "echo 'this project has no test'",
     "build": "NODE_ENV=production webpack -p"
   },
-  "dependencies": {
-    "stylelint-config-standard": "^36.0.0"
-  },
   "engines": {
     "node": ">=18"
   },
   "devDependencies": {
     "husky": "^7.0.2",
     "jsonlint": "^1.6.3",
-    "semantic-release": "^22.0.12",
+    "semantic-release": "^22.0.12"
+  },
+  "peerDependencies": {
+    "postcss": "^8.4.38",
+    "stylelint-config-standard-scss": "^13.1.0",
+    "stylelint-config-standard": "^36.0.0",
     "stylelint": "^16.3.1"
   },
   "keywords": [
