--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test": "echo 'this project has no test'"
   },
   "engines": {
-    "node": ">=18"
+    "node": "18.x"
   },
   "devDependencies": {
     "husky": "^7.0.2",
